# dashboard-practicantes

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  views.py
core/migrations/: 0001_initial.py  0002_participacionproyecto.py  0003_registrojornada.py  0004_registrojornada_horas_trabajadas.py  0005_practicante.py  0006_reporteavance.py  0007_alter_practicante_rut.py  0008_practicante_celular_practicante_fecha_nacimiento.py  0009_alter_reporteavance_fecha.py  0010_proyecto_imagen.py  0011_perfiladmin.py  0012_sugerencia.py  0013_sugerencia_archivo_adjunto.py  0013_sugerencia_estado.py  0014_merge_20260407_1648.py  0014_sugerencia_archivo_adjunto.py  0015_tareas_scrum.py
core/services/: __init__.py  horas.py
core/templates/: admin_horas.html  admin_perfil.html  admin_perfil_editar.html  admin_practicante_crear.html  admin_practicante_editar.html  admin_practicante_perfil.html  admin_practicantes.html  admin_proyecto_detalle.html  admin_proyectos.html  admin_reportes.html  base.html  horas.html  inicio.html  login.html  perfil.html  perfil_editar.html  proyecto_crear.html  proyecto_detalle.html  proyecto_foto_form.html  proyectos.html  reporte_form.html  sugerencias.html
src/: main.js  main.js.map  style.css
viteOptimization/: postcss.config.js
