[project]
name = "dashboard-practicantes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "openpyxl>=3.1.5",
    "pillow>=12.1.1",
    "dj-database-url>=2.5.0",
    "psycopg2-binary>=2.9.10",
    "django-storages>=1.14.6",
    "boto3>=1.42.88",
]
